Fix z-index for care card arrow

--- a/assets/scss/legacy/care-card/_care-card.scss
+++ b/assets/scss/legacy/care-card/_care-card.scss
@@ -52,6 +52,7 @@
   position: absolute;
   transform: rotate(45deg);
   width: 20px;
+  z-index: 1;
   /* [3] */
   @include print-hide();
 
