--- a/style-gutenburg.css
+++ b/style-gutenburg.css
@@ -11381,6 +11381,7 @@
   position: absolute;
   transform: rotate(45deg);
   width: 20px;
+  z-index: 1;
   /* [3] */
 }
 
